force-app/main/default/objects/Engagement__c/Engagement__c.object-meta.xml
<CustomObject>
    <description>EXL Salesforce COE engagement master projection used by Resource 360.</description>
    <label>Engagement</label>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>