force-app/main/default/objects/Engagement__c/fields/Acceptance_First_Pass_Percent__c.field-meta.xml
<CustomField><fullName>Acceptance_First_Pass_Percent__c</fullName><description>Deliverables accepted on first submission divided by all accepted deliverables.</description><label>Acceptance First Pass Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>