force-app/main/default/objects/Engagement__c/fields/Account_Health_Score__c.field-meta.xml
<CustomField><fullName>Account_Health_Score__c</fullName><description>Composite commercial, delivery and relationship health score.</description><label>Account Health Score</label><precision>5</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>