force-app/main/default/objects/Engagement__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField><fullName>Actual_End_Date__c</fullName><label>Actual End Date</label><trackHistory>true</trackHistory><type>Date</type></CustomField>