force-app/main/default/objects/Engagement__c/fields/Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percent__c</fullName><label>Completion Percent</label><precision>5</precision><scale>2</scale><trackHistory>true</trackHistory><type>Percent</type>
</CustomField>