force-app/main/default/objects/Engagement__c/fields/Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality__c</fullName>
    <defaultValue>&quot;EXL Internal&quot;</defaultValue>
    <label>Confidentiality</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXL Internal</fullName>
                <default>true</default>
                <label>EXL Internal</label>
            </value>
            <value>
                <fullName>EXL Confidential</fullName>
            </value>
            <value>
                <fullName>Client Confidential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>