force-app/main/default/objects/Engagement__c/fields/CSAT_Score__c.field-meta.xml
<CustomField><fullName>CSAT_Score__c</fullName><description>Latest customer satisfaction score on a five-point scale.</description><label>CSAT Score</label><precision>5</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>