force-app/main/default/objects/Engagement__c/fields/High_Risk_Age_Days__c.field-meta.xml
<CustomField><fullName>High_Risk_Age_Days__c</fullName><description>Age of the oldest unresolved high-severity risk.</description><label>High Risk Age Days</label><precision>7</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>