force-app/main/default/objects/Engagement__c/fields/Incident_Count__c.field-meta.xml
<CustomField><fullName>Incident_Count__c</fullName><description>Delivery-related production incidents in the current period.</description><label>Incident Count</label><precision>6</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>