force-app/main/default/objects/Engagement__c/fields/Intake_Correlation_ID__c.field-meta.xml
<CustomField><fullName>Intake_Correlation_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Intake Correlation ID</label><length>80</length><type>Text</type><unique>true</unique></CustomField>