force-app/main/default/objects/Engagement__c/fields/Intake_Source__c.field-meta.xml
<CustomField><fullName>Intake_Source__c</fullName><label>Intake Source</label><length>100</length><type>Text</type></CustomField>