force-app/main/default/objects/Engagement__c/fields/Mandatory_Skill_Coverage_Percent__c.field-meta.xml
<CustomField><fullName>Mandatory_Skill_Coverage_Percent__c</fullName><description>Filled mandatory skill demand divided by total mandatory skill demand.</description><label>Mandatory Skill Coverage Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>