force-app/main/default/objects/Engagement__c/fields/NPS_Score__c.field-meta.xml
<CustomField><fullName>NPS_Score__c</fullName><description>Latest customer net promoter score.</description><label>NPS Score</label><precision>5</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>