force-app/main/default/objects/Engagement__c/fields/Plan_Actual_Variance_Percent__c.field-meta.xml
<CustomField><fullName>Plan_Actual_Variance_Percent__c</fullName><description>Approved actual effort variance versus planned effort.</description><label>Plan Actual Variance Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>