force-app/main/default/objects/Engagement__c/fields/Portfolio__c.field-meta.xml
<CustomField><fullName>Portfolio__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Portfolio</label><referenceTo>R360_Portfolio__c</referenceTo><relationshipLabel>Engagements</relationshipLabel><relationshipName>Engagements</relationshipName><type>Lookup</type></CustomField>