force-app/main/default/objects/Engagement__c/fields/Portfolio_ID__c.field-meta.xml
<CustomField><fullName>Portfolio_ID__c</fullName><label>Portfolio ID</label><length>80</length><trackHistory>true</trackHistory><type>Text</type></CustomField>