force-app/main/default/objects/Engagement__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Managed Engagements</relationshipLabel>
    <relationshipName>Managed_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>