force-app/main/default/objects/Engagement__c/fields/Release_Count__c.field-meta.xml
<CustomField><fullName>Release_Count__c</fullName><description>Completed production releases.</description><label>Release Count</label><precision>6</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>