force-app/main/default/objects/Engagement__c/fields/Risk_Exposure_Score__c.field-meta.xml
<CustomField><fullName>Risk_Exposure_Score__c</fullName><description>Sum of current risk probability-impact exposure.</description><label>Risk Exposure Score</label><precision>10</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>