force-app/main/default/objects/Engagement__c/fields/Role_Readiness_Percent__c.field-meta.xml
<CustomField><fullName>Role_Readiness_Percent__c</fullName><description>Required delivery roles with ready qualified supply divided by total required roles.</description><label>Role Readiness Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>