force-app/main/default/objects/Engagement__c/fields/Salesforce_Tower__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Tower__c</fullName>
    <label>Salesforce Tower</label>
    <length>100</length>
    <type>Text</type>
</CustomField>