force-app/main/default/objects/Engagement__c/fields/Schedule_Variance_Days__c.field-meta.xml
<CustomField><fullName>Schedule_Variance_Days__c</fullName><description>Forecast completion variance versus the approved baseline end date.</description><label>Schedule Variance Days</label><precision>7</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>