force-app/main/default/objects/Engagement__c/fields/Sub_Portfolio__c.field-meta.xml
<CustomField><fullName>Sub_Portfolio__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Sub-portfolio</label><referenceTo>R360_Sub_Portfolio__c</referenceTo><relationshipLabel>Projects</relationshipLabel><relationshipName>Projects</relationshipName><type>Lookup</type></CustomField>