force-app/main/default/objects/Engagement__c/validationRules/Engagement_Completion_Range.validationRule-meta.xml
<ValidationRule><fullName>Engagement_Completion_Range</fullName><active>true</active><errorConditionFormula>OR(Completion_Percent__c &lt; 0, Completion_Percent__c &gt; 100)</errorConditionFormula><errorMessage>Completion percent must be between 0 and 100.</errorMessage></ValidationRule>