force-app/main/default/objects/Engagement__c/validationRules/Engagement_Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>Engagement end date cannot precede the start date.</errorMessage>
</ValidationRule>