force-app/main/default/objects/Engagement__c/validationRules/Project_Hierarchy_Consistent.validationRule-meta.xml
<ValidationRule><fullName>Project_Hierarchy_Consistent</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Sub_Portfolio__c)), OR(Sub_Portfolio__r.Portfolio__c &lt;&gt; Portfolio__c, Account__c &lt;&gt; Portfolio__r.Account__c))</errorConditionFormula><errorMessage>Project account, portfolio and sub-portfolio must belong to the same hierarchy.</errorMessage></ValidationRule>