force-app/main/default/objects/Engagement__c/listViews/Active_Delivery.listView-meta.xml
<ListView><fullName>Active_Delivery</fullName><columns>NAME</columns><columns>Engagement_ID__c</columns><columns>Lifecycle_Stage__c</columns><columns>Completion_Percent__c</columns><columns>Project_Manager__c</columns><columns>End_Date__c</columns><filterScope>Everything</filterScope><filters><field>Status__c</field><operation>equals</operation><value>Active</value></filters><label>Active Delivery</label></ListView>