force-app/main/default/objects/Engagement__c/listViews/Closeout_Readiness.listView-meta.xml
<ListView><fullName>Closeout_Readiness</fullName><columns>NAME</columns><columns>Engagement_ID__c</columns><columns>Lifecycle_Stage__c</columns><columns>Completion_Percent__c</columns><columns>Actual_End_Date__c</columns><filterScope>Everything</filterScope><filters><field>Lifecycle_Stage__c</field><operation>equals</operation><value>Closeout</value></filters><label>Closeout Readiness</label></ListView>